--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -9,7 +9,7 @@ layout: default
   {% include page__hero_video.html %}
 {% endif %}
 <div id="discourse-topic-list">
-  <d-topics-list discourse-url="http://forum.smonge.com/embed/topics" per-page="10" template="complete">
+  <d-topics-list discourse-url="http://forum.smonge.com" per-page="10" template="complete">
   </d-topics-list>
 </div>  
 <div id="main" role="main">
