--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -8,8 +8,9 @@ layout: default
 {% elsif page.header.video.id and page.header.video.provider %}
   {% include page__hero_video.html %}
 {% endif %}
+<div class="discourse-topic-embed">
 <d-topics-list discourse-url="http://forum.smonge.com" per-page="5" template="complete"> 
-</div>  
+</div>
 <div id="main" role="main">
   <article class="splash" itemscope itemtype="https://schema.org/CreativeWork">
     {% if page.title %}<meta itemprop="headline" content="{{ page.title | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
