--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -22,6 +22,7 @@ classes:
 
     <section class="page__content" itemprop="text">
       {{ content }}
+      {{ site.posts }}
     </section>
   </article>
 </div>
