--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -22,7 +22,7 @@ classes:
 
     <section class="page__content" itemprop="text">
       {{ content }}
-      {{ site.posts }}
+      {{ posts }}
     </section>
   </article>
 </div>
