--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,9 @@
 ---
 layout: archive
 ---
-
+<div class="discourse-topic-embed">
+<d-topics-list discourse-url="http://forum.smonge.com" per-page="5" template="complete"> 
+</div>
 {{ content }}
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
