--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: archive
 ---
 <div class="discourse-topic-embed">
-<d-topics-list discourse-url="http://forum.smonge.com" per-page="5" template="complete"> 
+<d-topics-list discourse-url="http://forum.smonge.com" per-page="5" template="complete" style="width: 100%; height: 200px;"> 
 </div>
 {{ content }}
 
