--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: archive
 ---
 <div class="discourse-topic-embed">
   <h1>Latest Content</h1>
-<d-topics-list discourse-url="http://forum.smonge.com" per-page="5" template="complete" style="width: 100%;height: 200px;"> 
+<d-topics-list discourse-url="http://forum.smonge.com" per-page="5" template="complete"> 
 </div>
 {{ content }}
 
