--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,7 +6,7 @@
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
-discourse-topic-embed iframe{
+discourse-topic-embed d-topics-list iframe{
   width: 100%
   height: 200px
 }
