--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -14,6 +14,11 @@ layout: default
   {% endunless %}
 {% endif %}
 
+<div class="discourse-topic-embed">
+  <h1>Latest Content</h1>
+<d-topics-list discourse-url="http://forum.smonge.com" per-page="5" template="complete"> 
+</div>
+
 <div id="main" role="main">
   {% include sidebar.html %}
 
