--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,7 +10,7 @@
   width: 100%;
   height: 200px;
 }
-discourse-topic-embed {
+.discourse-topic-embed {
   background: radial-gradient(rgba(0,0,0,0.6), transparent);
   border-top: 1px solid;
   border-bottom: 1px solid;
