--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,7 +10,7 @@ $border-color: #dddddd;
 $background-color: #222222;
 $footer-background-color: #222222;
 $link-color: #0f82af;
-$masthead-link-color: #c14924;
+$masthead-link-color: #dddddd;
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
