--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -23,6 +23,11 @@ layout: default
   {% include sidebar.html %}
 
   <div class="archive">
+    <div class="sidebar">
+      <iframe src="forum.smonge.com">
+        </iframe>
+    </div>
+  </div>
     {% unless page.header.overlay_color or page.header.overlay_image %}
       <h1 id="page-title" class="page__title">{{ page.title }}</h1>
     {% endunless %}
