--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -24,7 +24,7 @@ layout: default
 
   <div class="archive">
     <div class="sidebar">
-      <iframe src="forum.smonge.com">
+      <iframe src="https://forum.smonge.com/latest">
         </iframe>
     </div>
   </div>
