--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -16,7 +16,7 @@ layout: default
 
 <div class="discourse-topic-embed">
   <h1>Latest Content</h1>
-<d-topics-list discourse-url="http://forum.smonge.com" category="7" per-page="5" template="complete"> 
+<d-topics-list discourse-url="https://forum.smonge.com" category="7" per-page="5" template="complete"> 
 </div>
 
 <div id="main" role="main">
