--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -24,7 +24,7 @@ layout: default
 
   <div class="archive">
     <div class="sidenav">
-      <iframe src="https://forum.smonge.com/latest">
+      <iframe src="http://forum.smonge.com/latest">
       </iframe>
     </div>
     {% unless page.header.overlay_color or page.header.overlay_image %}
