--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,6 +18,9 @@ $masthead-link-color: #dddddd;
   max-width: none;
   width: 100%
 }*/
+.th{
+  color: #2f3333;
+}
 .discourse-topic-embed d-topics-list iframe{
   width: 100%;
   height: 200px;
